save modified files

--- a/00-screener/info-needed.html
+++ b/00-screener/info-needed.html
@@ -1,6 +1,6 @@
 ---
 layout: application
-title: Before you apply, we’ll need some more info. This helps us get you benefits faster.
+title: Before you start applying for jobs, you will need identification. This helps you get hired faster during the interview process.
 button_text: Get started!
 script: |
   <script>
@@ -14,23 +14,30 @@ script: |
 ---
 
 <p class="usa-font-lead">
-  Use this list to help you gather what you may need to apply.
+  Here are the list of identifications needed before getting hired.
 </p>
 
-<h3>Here’s some info we need:</h3>
+<h3>Identification</h3>
 <ul class="bulleted-list">
-  <li>You and your household, addresses, and date of birth</li>
-  <li>Phone number to follow-up, which helps you get benefits quicker</li>
-  <li>Money from jobs or other sources, and employer info</li>
-  <li>Housing expenses</li>
-  <li>Social Security Numbers for anyone you’re applying for</li>
-  <li>Government benefits such as unemployment or retirement account payments</li>
-  <li>Any medical coverage, disabilities, and/or pregnancies</li>
+  <li>Social Security Card</li>
+  <li>State Identification</li>
+  <li>Birth Certificate</li>
+  <li>i-9</li>
 </ul>
 
+<div class="explainer">
+  <a href="#" class="explainer__toggle" aria-expanded="false" aria-controls="explainer-1">Info for Native Alaskans</a>
+  <div class="explainer__content" id="explainer-1">
+    <p>Identification requirements will be different for you</p>
+
+    <p><strong>If you or someone in your household is not a citizen, you may still be able to receive some benefits.</strong></p>
+
+    <p>We ask about your identity so that we can help you find programs that specialize for your needs.</p>
+  </div>
+</div>
 
 <div class="explainer">
-  <a href="#" class="explainer__toggle" aria-expanded="false" aria-controls="explainer-1">Info for immigrants</a>
+  <a href="#" class="explainer__toggle" aria-expanded="false" aria-controls="explainer-1">Info for Immigrants</a>
   <div class="explainer__content" id="explainer-1">
     <p>Applying for these programs will not affect your or your family's immigration status.</p>
 
