--- a/welcome.html
+++ b/welcome.html
@@ -14,13 +14,15 @@ script: |
     <div class="usa-alert usa-alert-info">
       <div class="usa-alert-body">
         <h3 class="usa-alert-heading">This is not a real application.</h3>
-        <p class="usa-alert-text">This site is a generic template designed for local government benefit administrators to customize for their enrollment applications. No data entered on this will be shared or stored.</p>
+        <p class="usa-alert-text">This site is a generic template designed for local government and nonprofit administrators to customize for their client checklist. No data entered on this will be shared or stored.</p>
         <p class="usa-alert-text"><a href="{{ base }}">Learn more</a></p>
       </div>
     </div>
 
     <h1>Welcome!</h1>
-    <p class="usa-font-lead">This site will help you apply for food assistance (SNAP) and healthcare coverage (Medicaid).</p>
+    <p class="usa-font-lead">Everyone deserves a second chance and yet, the road to starting over can be stressful. <br>
+    <br>
+    This site is here to help you get back on your feet! This site will make sure that journey back to re-employment will be as smooth and easy as possible. We are rooting for your success!</p>
   </div>
 </div>
 
@@ -29,22 +31,22 @@ script: |
     <h2 class="benefits-highlights-header">Programs that can help you:</h2>
     <div class="benefits-highlights">
       <div class="usa-width-one-half">
-        <h2>Food Assistance</h2>
-        <h3>Supplemental Nutrition Assistance Program (SNAP)</h3>
-        <p>Money for food at supermarkets, farmer’s markets, and convenience stores</p>
+        <h2>Re-Entry Assistance</h2>
+        <h3>Partners for Re-Entry Center</h3>
+        <p>Nonprofit that provides comprehensive reentry support including employment services, transitional housing assistance, counseling and mentoring.</p>
       </div>
       <div class="usa-width-one-half">
-        <h2>Healthcare Coverage</h2>
-        <h3>Medicaid, CHIP and Marketplace health insurance</h3>
-        <p>Free or low-cost health coverage may help pay for medical bills, doctor visits, or prescriptions</p>
+        <h2>Alaska Native Re-Entry Assistance</h2>
+        <h3>Alask Native Justice Center &amp; CITC</h3>
+        <p> Two nonprofits that provides comprehensive reentry support including employment services, transitional housing assistance, counseling and mentoring.</p>
       </div>
     </div>
 
-    <h2>Apply for these programs in 3 steps</h2>
+    <h2>We will walk you through what you need to do for successful re-entry in 3 steps!</h2>
     <ul class="styled-numbered-list">
-      <li>Check to see what benefits you may qualify for.</li>
-      <li>Answer questions about you and your household.</li>
-      <li>Submit an application for one or more programs. It will go to your local benefit office for review and follow-up.</li>
+      <li>Check to see what benefits/services are available to you along your path.</li>
+      <li>Answer honestly a few questions about yourself and your needs for the best results.</li>
+      <li>If at any point you get lost or confused or need to stop, just hit the save button and you will be directed to a variety of ways to save your progress and pick up back where you left off whenever you are ready!</li>
     </ul>
 
 
