--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@ script: |
 
 <header class="hero--darker">
   <div class="usa-grid">
-    <span class="label-big"><a href="#alpha">Alpha Release</a></span>
-    <h1>This site hosts a multi-benefit application and enrollment <a href="welcome.html">prototype</a>.</h1>
+    <span class="label-big"><a href="#alpha">Alpha Roadmap</a></span>
+    <h1>This site is a step by step <a href="welcome.html">prototype guide</a> for employment.</h1>
 
-    <p>This prototype has been designed with applicants for critical public benefit programs to model how to create simpler, user-centered multi-program applications.</p>
+    <p>This prototype will be designed with case managers and job seekers to meet job seeker needs of guidance and support for navigating public services during critical periods of unemployment. And model how to create simpler, user-centered multi-persona roadmaps.</p>
 
-    <p>This is a template that local benefits administrators can customize for their enrollment programs. It is not a real application: <strong>no data entered on these pages will be shared or stored</strong>.</p>
+    <p>This is a template that local employment specialist and case managers can use to customize for their independent job seeker to do list. It is not a real application: <strong>no data entered on these pages will be shared or stored</strong>.</p>
 
     <p><a href="welcome.html" class="usa-button usa-button-big usa-button-secondary">Demo the prototype</a></p>
   </div>
@@ -29,11 +29,11 @@ script: |
   <div class="usa-grid">
     <h2>Background</h2>
 
-    <p class="usa-font-lead">Building on the work of Medicaid modernization, the <a href="https://www.cms.gov/">Centers for Medicaid and Medicare</a> and the <a href="https://www.usds.gov/">U.S. Digital Service</a> have been working to use the tools of technology and design to <strong>improve how benefit applicants get access to critical services.</strong></p>
+    <p class="usa-font-lead">Building on the work of Workforce Development modernization, <a href="https://www.codeforamerica.org" target="_blank">Code for America</a> and the <a href="https://www.muni.org/departments/employee_relations/pages/jol.aspx" target="_blank">Municipality of Anchorage</a> have been working to use the tools of technology and design to <strong>improve how the hardest to reach job seekers get access to critical services and resources for successful re-entry into the workforce.</strong></p>
 
-    <p>Our team began by exploring the current state of benefit enrollment and delivery across agencies and states in an extensive qualitative user research field study. <a href="{{ base }}assets/discovery-findings-mapping-enrollment-Nov2016.pdf">See the report of our findings</a>.</p>
+    <p>Our team began by exploring the current state of job seeker services and delivery across local city job centers and nonprofits in an extensive qualitative user research field study. <a href="{{ base }}assets/discovery-findings-mapping-enrollment-Nov2016.pdf">See the report of our findings</a>.</p>
 
-    <p>From here, our team began working closely with local benefit program administrators to identify tools to help accelerate their program modernization efforts. </p>
+    <p>From here, our team began working closely with local case managers to identify tools to help accelerate their service delivery modernization efforts. </p>
   </div>
 </section>
 
@@ -41,36 +41,36 @@ script: |
   <div class="usa-grid">
     <h2>About this prototype</h2>
 
-    <p class="usa-font-lead">This prototype demonstrates a user-centered enrollment model that leverages data sharing between agencies to <strong>minimize the burden on applicants in determining program eligibility</strong>.</p>
+    <p class="usa-font-lead">This prototype demonstrates a user-centered enrollment model that leverages data sharing between agencies and case managers to <strong>minimize the burden on applicants in determining program eligibility and accessing governmental services in their journey of re-entry and re-employment</strong>.</p>
 
-    <p>In our research, we saw a common need from state programs for an online application template which offices can customize to meet their own policy and user requirements.</p>
+    <p>In our research, we saw a common need from job seekers for guidance on overcoming personal challenges to re-employment. This was validated by a common tasks provided by servicers to refer non-eligible clients to an independent search of navigating public services and resources through inconsistent means. Thus, an online roadmap template which offices can customize to meet the needs of independent job seeker clients has been viewed as a desired solution through initial rounds of testing.</p>
 
-    <p>The alpha version of the prototype is designed to model how one or more applicants can apply for SNAP and/or Medicaid — two of the largest programs with demographic eligibility overlap.</p>
+    <p>The alpha version of the prototype is designed to model how one or more applicants can use the tailored roadmap to guide them on the necessary things to do to become job-ready; particularly for re-entrants with low level computer skills.</p>
   </div>
 </section>
 
 <section class="panel--dark-gray">
   <div class="usa-grid">
-    <h2>Design principles for user-centered online benefits applications</h2>
+    <h2>Design principles for user-centered online roadmap to job-readiness</h2>
   </div>
   <div class="usa-grid design-principles">
     <div class="usa-width-one-third design-principles__item">
-      <h3><span class="design-principle__number">1.</span> Design for real-time eligibility determination and same-day enrollment.</h3>
-      <p>Model how states would collect data to verify against other government systems when possible.</p>
+      <h3><span class="design-principle__number">1.</span> Design for real-time job readiness determination, managing job search expectations, and detailed instruction for agency interactions for accessing resources and needed documents.</h3>
+      <p>Model how providers would collect data to verify against other government systems when possible.</p>
     </div>
     <div class="usa-width-one-third design-principles__item">
       <h3><span class="design-principle__number">2.</span> Work to connect people to the programs they want and need, in as few steps as possible.</h3>
-      <p>Give applicants the option to apply for multiple benefits at once or to apply for just one benefit while informing them of other programs available to them.</p>
+      <p>Give applicants the option to complete multiple tracks at once or to perform one track while informing them of other programs available to them.</p>
     </div>
     <div class="usa-width-one-third design-principles__item">
       <h3><span class="design-principle__number">3.</span> Mobile-first responsive design.</h3>
-      <p>Ensure that people can apply on all devices by designing first for small screens and low bandwidth.</p>
+      <p>Ensure that people can utilize tool on all devices by designing first for small screens and low bandwidth.</p>
     </div>
   </div>
   <div class="usa-grid design-principles">
     <div class="usa-width-one-third design-principles__item">
-      <h3><span class="design-principle__number">4.</span> Plain language and warm voice.</h3>
-      <p>These programs are complicated: do the hard work to keep the wording deadly simple. Use a conversational, encouraging tone and show people where they are in the process at all times.</p>
+      <h3><span class="design-principle__number">4.</span> Plain language,  warm voice, and motivating tone.</h3>
+      <p>These programs are complicated and re-entry to employment is emotionally stressful. Do the hard work to keep the wording deadly simple. Use a conversational, encouraging tone and show people where they are in the process at all times.</p>
     </div>
     <div class="usa-width-one-third design-principles__item">
       <h3><span class="design-principle__number">5.</span> Fewer prompts per screen. </h3>
